Kubestats/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubestats
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: kubestats
    spec:
      containers:
      - name: kubestats
        image: gcr.io/kubernetes-playground-176304/kubestats:latest
        ports:
        - containerPort: 5000
