Kubestats/tcp_loadbalancer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubestats-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: kubestats
