Kubestats/ingress_loadbalancer_service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: kubestats-service
    servicePort: 80
